# ouchservice

./: .clang-format  .gitignore  CMakeLists.txt  STATUS.md
.github/workflows/: ci.yml
apps/: CMakeLists.txt  bist_colo.cpp
apps/tools/: latency_bench.cpp  ouch_decode.cpp  preflight.cpp  scenario_lint.cpp
config/: bist_preprod.local.toml.example  bist_preprod.toml  bist_prod_like.local.toml.example  bist_prod_like.toml  bist_t_plus_1.local.toml.example  bist_t_plus_1.toml
deploy/: bist-colo.service  install.sh
docs/: BIST_10_10_READINESS_PLAN.md  BIST_ENVIRONMENTS.md  FIX_INTEGRATION.md  GAP-REPORT.md  KNOWN_LIMITATIONS.md  RUNBOOK.md
docs/superpowers/specs/: 2026-05-05-bist-colo-client-design.md
include/bist/app/: reconnect_policy.hpp
include/bist/config/: config.hpp
include/bist/core/: alloc_guard.hpp  endian.hpp  result.hpp  ring_buffer.hpp  time.hpp  types.hpp
include/bist/domain/: instrument.hpp  order_book.hpp  throttler.hpp  token_registry.hpp
include/bist/fix/: acceptor_mock.hpp  facade.hpp  fields.hpp
include/bist/mock/: ouch_gateway.hpp
include/bist/net/: epoll_reactor.hpp  reactor.hpp  soupbintcp.hpp  tcp_socket.hpp
include/bist/observability/: audit.hpp  logger.hpp  sequence_store.hpp
include/bist/ouch/: client.hpp  codec.hpp  messages.hpp  session.hpp
include/bist/risk/: ptrm.hpp
include/bist/runner/: fix_replay.hpp  replay.hpp  scenario.hpp  transport.hpp
scenarios/: fix_oe_temel.yaml  fix_rd_temel.yaml  ouch_bolum1_baglanti.yaml  ouch_bolum2_emir_iletim.yaml  ouch_bolum2_eod_batch.yaml  ouch_bolum2_gateway_failover.yaml  ouch_bolum2_surekli.yaml  ouch_bolum2_throttling.yaml  ouch_bolum3_piyasa_yapicilik.yaml
scripts/: audit_pack.sh  build_deploy.sh
src/: CMakeLists.txt
src/config/: config.cpp
src/fix/: CMakeLists.txt  acceptor_mock.cpp  facade_quickfix.cpp  facade_stub.cpp
src/fix/internal/: acceptor_mock.hpp  converters.hpp  dc_app.hpp  initiator.hpp  oe_app.hpp  rd_app.hpp
src/mock/: CMakeLists.txt  ouch_gateway.cpp
src/risk/: ptrm.cpp
src/runner/: scenario_loader.cpp
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  alloc_hooks.cpp  test_alloc_guard.cpp  test_audit_log.cpp  test_codec.cpp  test_config.cpp  test_endian.cpp  test_epoll_reactor.cpp  test_instrument.cpp  test_messages.cpp  test_order_book.cpp  test_ptrm.cpp  test_reconnect_policy.cpp  test_replay_matching.cpp  test_ring_buffer.cpp  test_scenario_lint.cpp  test_sequence_store.cpp  test_session_pair.cpp  test_soupbintcp.cpp  test_throttler.cpp  test_token_encoding.cpp  test_token_registry.cpp
